fix(expert game state)
(cherry picked from commit 9005b76d315f20d1fa8bf082c536e8ec80ceeff8)