@@ -21,7 +21,7 @@ public abstract class SugarMessageProcessor {
                 .filter(method -> method.getParameterCount() == 2)  // Get methods that take exactly two parameters
                 //.filter(method -> method.getParameterTypes()[0].equals(SugarMessage.class))  // Get methods that take a Message as first parameter
                 .filter(method -> method.getParameterTypes()[1].equals(Peer.class)) // Get methods that take a Peer as second parameter
-                .collect(Collectors.toList());
+                .toList();
 
         // Invoke the method whose annotation parameter matches message type
         for(var method : methods) {
